--- a/server/.env
+++ b/server/.env
@@ -4,5 +4,11 @@ PORT=8000
 
 JWT_SECRET_KEY=mynameisaakashshrestha
 
+#nodemailer
 USER=aakash.cerestha90@gmail.com
 PASS=oihj bdir tamp gmuj
+
+#cloudinary
+API_KEY=372732136565341
+API_SECRET_KEY=G1ZahddZUBOltSyLkqUAPIinLmQ
+CLOUD_NAME=dza7zncez
