--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.2",
-    "axios": "^1.7.7",
+    "axios": "^1.10.0",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
