--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,11 @@
     "axios": "^1.10.0",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2",
-    "react-simple-typewriter": "^5.0.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.30.1",
+    "react-simple-typewriter": "^5.0.1",
+    "react-spinners": "^0.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
